Fix inconsistent spacing above navbar dropdowns

--- a/css/main.css
+++ b/css/main.css
@@ -228,6 +228,7 @@ iframe {
         display: block;
     }
     ul.nav ul.dropdown-menu {
+        --bs-dropdown-spacer: 0;
         top: 90%;
     }
 }
